@@ -21,7 +21,7 @@ local gmeta = { __index=_G }
 local LastMessage = {}
 local TablePanelSort -- must be separate from LastMessage, otherwise Far crashes after a macro is called from CtrlF12.
 local TableExecString -- must be separate from LastMessage, otherwise Far crashes
-local utils, macrobrowser, panelsort, keymacro
+local utils, macrobrowser, panelsort, keymacro, customdata
 
 local function ExpandEnv(str) return (str:gsub("%%(.-)%%", win.GetEnv)) end
 
@@ -370,6 +370,30 @@ local function ProcessCommandLine (CmdLine)
   end
 end
 
+local function ProcessCustomData(data)
+  local code,result=false,""
+  if customdata then
+    code=true
+    local len,outdata=#data,{}
+    for i=1,len-1,2 do
+      table.insert(outdata,{Id=data[i][1],Text=data[i+1]})
+    end
+    outdata.FileName=data[len]
+    for _,callback in ipairs(customdata) do
+      if not callback(outdata) then
+        code=false
+        break
+      end
+    end
+    if code then
+      for _,item in ipairs(outdata) do
+        result=result..item.Text
+      end
+    end
+  end
+  return code,{result}
+end
+
 function export.Open (OpenFrom, arg1, ...)
   if OpenFrom == F.OPEN_LUAMACRO then
     local calltype = arg1
@@ -397,6 +421,8 @@ function export.Open (OpenFrom, arg1, ...)
         TablePanelSort = panelsort.GetSortModes()
         return F.MPRT_NORMALFINISH, TablePanelSort
       end
+    elseif calltype==F.MCT_CUSTOMDATA then
+      return ProcessCustomData({...})
     end
 
   elseif OpenFrom == F.OPEN_COMMANDLINE then
@@ -425,6 +451,13 @@ end
 function export.Configure (guid)
   local items = utils.GetMenuItems()
   if items[guid] then items[guid].action() end
+end
+
+local function AddCustomDataCallback(callback)
+  if "function"==type(callback) then
+    if not customdata then customdata={} end
+    table.insert(customdata,callback)
+  end
 end
 
 -- Add function unicode.utf8.cfind:
@@ -487,6 +520,8 @@ local function Init()
     Panel.SetCustomSortMode = panelsort.SetCustomSortMode
     Panel.CustomSortMenu = panelsort.CustomSortMenu
   end
+
+  Panel.AddCustomDataCallback=AddCustomDataCallback
 
   utils.FixInitialModules()
   utils.InitMacroSystem()
