@@ -1,4 +1,8 @@
-﻿zg 29.11.2014 13:27:38 +0200 - build 455
+﻿zg 30.11.2014 12:05:23 +0200 - build 456
+
+1. Panel.AddCustomDataCallback: добавляет новый обработчик данных для кастом колонок.
+
+zg 29.11.2014 13:27:38 +0200 - build 455
 
 1. уточнение поддержки UTF-8 BOM для moonscript.
 
